--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -17,10 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v3
         with:
-          python-version: '3.7'
+              python-version: 3.7
+
 
       - name: Create and start virtual environment
         run: |
