--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -28,10 +28,9 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: python -m pip install --upgrade pip
-              python -m pip install --upgrade python3
+        run: 
               pip install flask torch torchvision nltk
-              pip install flask==2.1.2
+              pip install flask==1.1.2
               python train.py
               python chat.py
 
