--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -32,6 +32,11 @@ jobs:
               pip install torch==1.12.0
               pip install torchvision==0.13.0
               pip install nltk==3.7
+              
+      - name: Build the app
+        run: python train.py
+              python train.py
+              python app.py
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Zip artifact for deployment
