--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -32,6 +32,7 @@ jobs:
               pip install torch==1.12.0
               pip install torchvision==0.13.0
               pip install nltk==3.7
+              pip install numpy
               
 
 
