--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -32,7 +32,7 @@ jobs:
               pip install torch==1.12.0
               pip install torchvision==0.13.0
               pip install nltk==3.7
-              pip install numpy
+              pip install numpy==1.26.2
               
 
 
