--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -26,9 +26,14 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install flask
+              pip install torch==1.12.0
+              pip install torchvision==0.13.0
+              pip install nltk==3.7
+              pip install numpy
+              
+
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Zip artifact for deployment
@@ -41,7 +46,6 @@ jobs:
           path: |
             release.zip
             !venv/
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -57,6 +61,11 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
+        
+      - name: Build the app
+        run: python train.py
+              python train.py
+              python app.py
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
