--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -27,11 +27,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
       - name: Install dependencies
-        run: pip install flask
-              pip install torch==1.12.0
-              pip install torchvision==0.13.0
-              pip install nltk==3.7
-              pip install numpy
+        run: pip install Flask torch torchvision nltk
               
 
 
