--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -59,7 +59,7 @@ jobs:
         run: unzip release.zip
         
       - name: Build the app
-        run: pip install numpy
+        run: pip install numpy==1.26.3
               python nltk_utils.py
               python train.py
               python chat.py
