--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -63,7 +63,7 @@ jobs:
         run: unzip release.zip
         
       - name: Build the app
-        run: pip install numpy==1.26.1
+        run: pip install numpy
               python nltk_utils.py
               python train.py
               python chat.py
