--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -63,11 +63,7 @@ jobs:
         run: unzip release.zip
         
       - name: Build the app
-        run: pip install flask
-              pip install torch==1.12.0
-              pip install torchvision==0.13.0
-              pip install nltk==3.7
-              pip install numpy
+        run: pip install Flask torch torchvision nltk
               python nltk_utils.py
               python train.py
               python chat.py
