--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           python-version: '3.10'
 
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
@@ -61,18 +62,25 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-        
-      - name: Build the app
-        run: pip install Flask torch torchvision nltk
-              python nltk_utils.py
-              python train.py
-              python chat.py
-              python app.py
 
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
+                
+
+      - uses: actions/download-artifact@v2
         with:
-          app-name: 'chatbot-flask'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1F6FE0C9BEAA428B9A6D098EBDE8C873 }}
+          name: python-app
+          path: .
+
+      - name: Log in to Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL }}
+
+      - name: Configure deployment and runtime settings on the webapp
+        run: |
+            az configure --defaults ${{ env.RESOURCE_GROUP }}
+            az webapp config appsettings --name ${{ env.WEBAPP_NAME }} --settings \
+            SCM_DO_BUILD_DURING_DEPLOYMENT=true \
+            FLASK_ENV=production
+
+            az webapp config set --name ${{ env.WEBAPP_NAME }} \
+            --startup-file "gunicorn --bind=0.0.0.0 --timeout 600 app:app"
