--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -84,3 +84,8 @@ jobs:
 
             az webapp config set --name ${{ env.WEBAPP_NAME }} \
             --startup-file "gunicorn --bind=0.0.0.0 --timeout 600 app:app"
+
+      - name: Deploy to App Service
+        uses: azure/webapps-deploy@v2
+        with:
+              app-name: ${{ env.WEBAPP_NAME}}
