--- a/.github/workflows/main_chatbot-flask.yml
+++ b/.github/workflows/main_chatbot-flask.yml
@@ -63,7 +63,7 @@ jobs:
         run: unzip release.zip
         
       - name: Build the app
-        run: 
+        run: pip install flask
               python app.py
 
       - name: 'Deploy to Azure Web App'
